--- a/gb/25/12/5/n14649180.md
+++ b/gb/25/12/5/n14649180.md
@@ -5,17 +5,18 @@
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2025/12/id14649186-20021011000020037534-original-600x400.jpg" />
 <h6>2002年10月11日，澳洲马拉松游泳名将塔米．范．维斯（Tammy van Wisse，左）与澳洲前总理霍华德（John Howard，中）合影资料照。(AAP Image/Julian Smith)</h6>
 <hr>
-<p>【大纪元2025年12月06日讯】【大纪元记者万梓清墨尔本编译报导】家住墨尔本的塔米．范．维斯（Tammy van Wisse）是澳洲非常有名的一位耐力游泳运动员。过去几十年来，她坚韧不拔的精神和积极的人生态度一直激励着许多人。然而，这位单身母亲现在却面临着一生中最艰难的挑战——第四期转移性乳腺癌。</p>
+<p>【大纪元2025年12月06日讯】（大纪元记者万梓清墨尔本编译报导）家住墨尔本的塔米．范．维斯（Tammy van Wisse）是澳洲非常有名的一位耐力游泳运动员。过去几十年来，她坚韧不拔的精神和积极的人生态度一直激励着许多人。然而，这位单身母亲现在却面临着一生中最艰难的挑战——第四期转移性乳腺癌。</p>
 <p>据《太阳先驱报》报导，范．维斯现年57岁，她一生都在地球上一些最冷、最长的水域中挑战自我。她是首位横渡巴斯海峡（Bass Strait）的游泳名将，并因此而载入吉尼斯世界纪录。</p>
 <p>她还游过新西兰的库克海峡（Cook Strait）、英吉利海峡（English Channel）、尼斯湖（Loch Ness）和吉普斯兰湖（Gippsland Lakes），参加过希腊奥林匹克运动会百年马拉松游泳比赛和纽约曼哈顿岛马拉松游泳比赛。</p>
 <p>2001年，范．维斯历时106天游完了整条墨累河（Murray River，澳洲最长的河），行程2438公里。</p>
 <p>2022年10月，她被诊断出乳腺癌，之后做了双乳切除手术。经过几个月的化疗和放疗，她的病情于2023年7月有所缓解。在接受治疗期间，范．维斯一直保持着像对待游泳挑战一样的决心和毅力。</p>
 <p>她曾在社交媒体上发帖说：“每种情况都有其光明的一面，即使有时候你得稍微发挥一下想像力才能找到它。”</p>
-<p>“我不是说总是有阳光和彩虹，当然不是那样的。当我第一次化疗后开始掉头发时，我哭了将近两天。“我无法改变我的诊断结果，但我可以选择在化疗的阴云中寻找一线希望。”</p>
+<p>“我不是说总是有阳光和彩虹，当然不是那样的。当我第一次化疗后开始掉头发时，我哭了将近两天。</p>
+<p>“我无法改变我的诊断结果，但我可以选择在化疗的阴云中寻找一线希望。”</p>
 <p>今年10月初，范．维斯又感到身体很疼，最初她还以为是在健身房训练过度造成的。不幸的是，经过检查后，医生发现她的癌症复发了，并扩散到了肺部和骨骼。</p>
-<p>为了帮助范．维斯支付医疗费用和生活开支，她的朋友萨德勒（Paul Sadler）帮她创建了一个众筹（GoFundMe）页面。</p>
+<p>为了帮助范．维斯支付医疗费用和生活开支，她的朋友萨德勒（Paul Sadler）帮她创建了一个众筹（<span style="color: #0000ff;"><a style="color: #0000ff;" href="https://www.gofundme.com/f/support-tammy-vanwisse-in-her-toughest-challenge-yet" target="_blank" rel="noopener">GoFundMe</a></span>）页面。</p>
 <p>萨德勒在众筹页面上写道：“塔米向我们展示了当你永不放弃时会发生什么，她鼓舞了太多的人，现在正是我们用同样的勇气、善意和热心帮助她继续战斗的机会。让我们帮助塔米继续她最伟大的耐力项目——为生命而战。”</p>
-<p>目前，范．维斯已收到超过58,700澳元善款。</p>
+<p>目前，范．维斯已收到超过59,000澳元善款。</p>
 <p>责任编辑：李欣然</p>
 <p><strong>墨尔本相关热门文章</strong><br />
 <span style="color: #0000ff;"><a style="color: #0000ff;" href=><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278737.md#1" target="_blank" rel="noopener"><strong>?【名医专栏】在澳洲看牙医，究竟哪种方案适合您？</strong></a></span><br />
@@ -24,33 +25,33 @@
 <span style="color: #0000ff;"><strong><a style="color: #0000ff;" href=><a href="https://github.com/1992513/djy/blob/master/gb/25/11/17/n14637301.md#1" target="_blank" rel="noopener">?【墨尔本医疗资讯】肺部评估不延迟<br />
 </a></strong></span></p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640659.md#1">罗晋被传婚变之际 经纪人发布罗父离世噩耗</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14640721.md#1">三退声明精选（2025/11/21）</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640342.md#1">英申请永居资格年限延至10年 港人BNO年限不变</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640341.md#1">郑州多名男子开越野车撞开烟酒店大门抢劫</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/23/n14122274.md#1">世卫要求北京说明儿童肺炎激增详情</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/23/n14122504.md#1">多种病毒流行 世卫要求说明 中国怎么了？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/28/n14645158.md#1">六四抗命军长受审视频曝光 分析：中共末日已近</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14641240.md#1">中共APT31利用云服务对俄IT产业发动网攻</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/8/27/n10670499.md#1" target="_blank">林辉：但愿来生不姓“胡”</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/10/14/n11587779.md#1" target="_blank">台北修炼心得交流会 法轮功学员谈身心改变</a></li>
+<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2020/07/20/a102898210.md#1" target="_blank">美国务卿：中共迫害法轮功21年 必须停止</a> </li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/3/10/n10207223.md#1" target="_blank">共产暴政录：儿子告发母亲致其母被处决</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/11/30/n10884257.md#1" target="_blank">美国会CECC吁川习会关注法轮功受迫害</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/27/n14644037.md#1">难以归位的怅然若失——解读苏轼《后赤壁赋》</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/4/26/n14492521.md#1">【品读唐诗】孟浩然的岘山第一诗</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647568.md#1">执子之手 不离不弃 一对美国夫妻的爱情传奇</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/14/n14635938.md#1">尚书公想招穷书生为婿 夫人选了贵公子 结局出人意料（上）</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/14/n14635971.md#1">尚书公想招穷书生为婿 夫人选了贵公子 结局出人意料（下）</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/5/n14649656.md#1">【直播】美国证监会是否默许华尔街输血中共？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/5/n14649642.md#1">【十字路口】上天的礼物 世界名流争睹神韵</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/5/n14649652.md#1">【新闻大破解】日中叙事战争 高下立判</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/4/n14648432.md#1">香港大火 71岁男子绝望呐喊照片震撼全球</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/3/n14648231.md#1">【军事情报局】台湾拟购阵风？勿忘拉法叶教训</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/4/n14648533.md#1">大陆恶性事件频发 报复对象转向政府和官员</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/4/n14648331.md#1">6岁儿子调皮狂奔 刘诗诗放大招 网友笑翻</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/3/n14648303.md#1">迪丽热巴新戏片酬曝光 疑为角色减重久病不愈</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647603.md#1">滨崎步零观众演出后返日 唱片公司会长批中共</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647639.md#1">胡歌首谈二胎儿子 自认做父亲挺失败</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/3/n14647968.md#1">《阿凡达3》公开两精彩片段 卡麦隆解释剧情</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/3/n14647976.md#1">专家：你的伴侣无条件爱你的3个迹象</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647604.md#1">【厨娘香Q秀】全麦核桃吐司</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/4/n14648713.md#1">AI产出的影片以假乱真 如何辨识？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/3/n14647816.md#1">为什么每天喝柳橙汁能增进心脏健康？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/4/n14648512.md#1">世界上最长的地名是著名城市 有168个字母</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/5/n14649620.md#1">幸福不是你能左右多少人，而是多少人愿意在你的左右</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/4/n14648578.md#1">大雪节气寒冬里 如何掌握养生要则与禁忌？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/30/n14645924.md#1">王九龄的《题旅店》：半梦半醒思乡国</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/17/n14637529.md#1">【古道人生】书生在饥荒中救一富家女成大富</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647110.md#1">奇异救赎——这世上另一个我</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651624.md#1">【佳音时刻】中共官场太荒诞 问责不误升官</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651951.md#1">【军事情报局】东南亚爆发战争 泰国攻入柬埔寨</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651982.md#1">【重播】泰国联合工作组开记者会 泰柬边境局势</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650041.md#1">分析：北京“稀土武器”效力正快速下降</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650517.md#1">相声演员郭德纲表演《艺高人胆小》遭约谈</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650551.md#1">日军机遭中共歼-15雷达照射 高市早苗回应</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650176.md#1">为捧儿子向佐亏数亿 向华强：上天给我的教训</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651351.md#1">迪丽热巴疑遭替身取代宣传新戏 视频吓坏网友</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650354.md#1">Netflix若收购华纳兄弟 将拥有9个系列影视</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650211.md#1">《阿凡达3》香港撤档 片名后缀因敏感字遭删</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650198.md#1">港星黄日华宣布退圈 告别45年演艺生涯</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650330.md#1">为什么飞机客舱的窗户是圆形的？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651688.md#1">如何预防车窗起雾？让Toyota告诉你</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651622.md#1">为何在天气寒冷时会手脚冰冷？如何改善？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650995.md#1">不小心让强力胶沾到物体表面 如何清除？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650878.md#1">研究：说话时善用手势可以增加说服力</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/25/12/5/n14649180.htm">曾创吉尼斯世界纪录 墨尔本泳坛名将罹癌</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/25/12/5/n14649180.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
