--- a/gb/25/11/19/n14638724.md
+++ b/gb/25/11/19/n14638724.md
@@ -30,12 +30,12 @@
 <p><ahref=><a href="https://github.com/1992513/djy/blob/master/gb/25/11/14/n14635702.md#1">孙雯胡骁案(2)：检方指控孙雯伪造州长签名</a></p>
 <p><ahref=><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14637979.md#1">孙雯胡骁案(3)：查获珠宝现钞 曝中共统战</a></p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/3/n14647841.md#1">时代广场地铁站惊传枪响 乘客四散奔逃无人受伤</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/3/n14647843.md#1">孙雯胡骁案（10）：检辩激战中国汇款疑点</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/3/n14647826.md#1">华商会：2月21日举办第30届法拉盛中国新年大游行</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/3/n14647825.md#1">吃霸王餐台湾网红 欠租4万遭房东驱逐</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652240.md#1">纽约市一房租金涨幅全美第一 五年大涨854美元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652271.md#1">长岛铁路和北方铁路新型售票机上线</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652265.md#1">康尼岛木板路将进行百年来首次全面重建</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652238.md#1">纳苏县长布莱克曼宣布参选纽约州长</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2020/01/05/a102745738.md#1" target="_blank">响彻世界政坛的正义之声</a>  </li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/2/23/n10165368.md#1" target="_blank">赵刚：穿制服的思想</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/11/19/n11666929.md#1" target="_blank">澳洲自由党参议员抨击中共野蛮强摘器官</a></li>
+<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2020/07/20/a102898210.md#1" target="_blank">美国务卿：中共迫害法轮功21年 必须停止</a> </li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/1/28/n10094168.md#1" target="_blank">如初：再回顾民国学人批苏俄</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/12/8/10/n3655834.md#1" target="_blank">王华：闲谈西方的签名与东方的手印</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
